# CleanText

./: CleanText.cabal
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/flag-cache/: CleanText-0.1.0.0-7e8eada61adfd574e43e7544c20cc171  CleanText-0.1.0.0-9ff5275624789f60a566aff49ff02ac8  CleanText-0.1.0.0-dc76f669f7403f6e6b161623fe0e7c0d  conduit-extra-1.1.9.2-887db8dd4f0e97ed5a78b1bbfdf2f36d  streaming-commons-0.1.15-35d5fca18d94a558ffcec0a79774692b
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/lib/x86_64-osx-ghc-7.10.2/CleanText-0.1.0.0-0pEjWvA4UZU9s2xRj7FCxW/: Generic.dyn_hi  NormDigit.dyn_hi  NormDigit.hi  Routines.dyn_hi  Twokenize.dyn_hi  Utils.dyn_hi  Utils.hi  libHSCleanText-0.1.0.0-0pEjWvA4UZU9s2xRj7FCxW-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/lib/x86_64-osx-ghc-7.10.2/CleanText-0.1.0.0-9Mrp8FGBhzm5vaBLQe5AHE/: Lib.dyn_hi  Lib.hi  libHSCleanText-0.1.0.0-9Mrp8FGBhzm5vaBLQe5AHE-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/lib/x86_64-osx-ghc-7.10.2/CleanText-0.1.0.0-EocXUlZfxqUIL7UTVUBJhB/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-3.18/7.10.2/pkgdb/: CleanText-0.1.0.0-7e8eada61adfd574e43e7544c20cc171.conf  package.cache
app/: Main.hs
src/: Lib.hs  NormDigit.hs  Routines.hs  Twokenize.hs  Utils.hs  out.txt
