name:                CleanText
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lingxiao/CleanText
license:             BSD3
license-file:        LICENSE
author:              Xiao Ling
maintainer:          lingxiao@seas.upenn.edu
copyright:           2016 Xiao Ling
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules  :     Utils
                    ,  Routines
                    ,  NormDigit
                    ,  Twokenize

  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , QuickCheck
                     , conduit
                     , conduit-extra 
                     , resourcet

  default-language:    Haskell2010

executable CleanText-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , bytestring
                     , CleanText
                     , conduit
                     , conduit-extra
  default-language:    Haskell2010

test-suite CleanText-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CleanText
                     , bytestring
                     , text
                     , conduit
                     , conduit-extra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/CleanText
